# massir_project

./: .gitignore  README.md  app_settings.json  main.py  pyproject.toml  requirements.txt
Examples/: app_settings.json  main.py
Examples/basic_app_consumer/: app_settings.json  main.py
Examples/basic_website_example/: app_settings.json  main.py  requirements.txt
Examples/data/: example.db
Examples/database_example/: README.md  app_settings.json  main.py  seed_data.py
Examples/module_loading_order/: app_settings.json  main.py
Examples/web_api_example/: README.md  app_settings.json  main.py
app/: __init__.py  config.py  event_system.py  exceptions.py  interfaces.py  loader.py  manager.py  registry.py
app/app_consumer/: manifest.json  module.py
core/: __init__.py  api.py  config.py  hook_types.py  hooks.py  inject.py  interfaces.py  kernel.py  log.py  module_loader.py  registry.py  run.py  settings_manager.py  stop.py  system_apis.py
core/apis/: __init__.py  system_apis.py
core/hooks/: __init__.py  definitions.py
data/: example.db
massir/: __init__.py
massir/core/: __init__.py  api.py  app.py  config.py  core_apis.py  exceptions.py  hook_types.py  hooks.py  inject.py  interfaces.py  log.py  module_loader.py  path.py  registry.py  run.py  settings_default.py  settings_manager.py  stop.py
modules/app_consumer/: manifest.json  module.py
modules/consumer/: manifest.json  module.py
modules/provider/: manifest.json  module.py
modules/system_logger/: module.py
tests/: __init__.py  conftest.py  requirements-test.txt
tests/modules/: __init__.py  (+3 more)
(+177 files in other folders)
